{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 137,
  "lineage": "2d515220-2dab-ebc6-c0e6-588e800596c9",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:internet-gateway/igw-02fba27ca08e34f2a",
            "id": "igw-02fba27ca08e34f2a",
            "owner_id": "209479272412",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0d9dac6f933b78f94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance[\"10.0.1.0/24\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bb6a80f01f03502",
            "arn": "arn:aws:ec2:ap-south-1:209479272412:instance/i-0725e0096f895ef83",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0725e0096f895ef83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0695b3bf8575f342a",
            "private_dns": "ip-10-0-222-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.222.57",
            "public_ip": "52.66.196.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03327fb6537412f20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0d6a4270708cf8d",
            "tags": {
              "Name": "nginx-server"
            },
            "tags_all": {
              "Name": "nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01984ea300bf4d9a2"
            ]
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat[\"eipalloc-123456\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c90ad507a684d42f",
            "arn": "arn:aws:ec2:ap-south-1:209479272412:elastic-ip/eipalloc-0c90ad507a684d42f",
            "association_id": "eipassoc-03fbd6c3d712c1f35",
            "domain": "vpc",
            "id": "eipalloc-0c90ad507a684d42f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-004de24f48d850ed1",
            "private_dns": "ip-10-0-1-100.ap-south-1.compute.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-13-126-137-109.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.137.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat[\"eipalloc-123456\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c90ad507a684d42f",
            "association_id": "eipassoc-03fbd6c3d712c1f35",
            "connectivity_type": "public",
            "id": "nat-036356f5898af69c8",
            "network_interface_id": "eni-004de24f48d850ed1",
            "private_ip": "10.0.1.100",
            "public_ip": "13.126.137.109",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0d6a4270708cf8d"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route-table[\"0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:route-table/rtb-03fb041eca4405d8a",
            "id": "rtb-03fb041eca4405d8a",
            "owner_id": "209479272412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02fba27ca08e34f2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "tags_all": {
              "Name": "route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9dac6f933b78f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routetableassoc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cdf1364c21ab511",
            "route_table_id": "rtb-03fb041eca4405d8a",
            "subnet_id": "subnet-0a0d6a4270708cf8d"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route-table.aws_route_table.main",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"mysecuritygroup1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:security-group/sg-0e9c5b2f2f040b821",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0e9c5b2f2f040b821",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mysecuritygroup1",
            "name_prefix": "",
            "owner_id": "209479272412",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9dac6f933b78f94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"0\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:subnet/subnet-0a0d6a4270708cf8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0d6a4270708cf8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479272412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my subnets"
            },
            "tags_all": {
              "Name": "my subnets"
            },
            "vpc_id": "vpc-0d9dac6f933b78f94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"0\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479272412:vpc/vpc-0d9dac6f933b78f94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c07a4363017c9c64",
            "default_route_table_id": "rtb-017527dd10e987a3f",
            "default_security_group_id": "sg-01984ea300bf4d9a2",
            "dhcp_options_id": "dopt-092a21c4f88c657d5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9dac6f933b78f94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017527dd10e987a3f",
            "owner_id": "209479272412",
            "tags": {
              "Name": "my vpc"
            },
            "tags_all": {
              "Name": "my vpc"
            }
          }
        }
      ]
    }
  ]
}